# 1brc

./: .gitignore  Cargo.toml  README.md
generator/: Cargo.toml
solutions/reference/: Cargo.toml
solutions/reference/src/: main.rs
src/: main.rs
